# uv-workflows-test

./: pyproject.toml
.github/workflows/: publish.yml  release.yml  ruff.yml
src/uv_workflows_test/: __init__.py  main.py
